Variaveis de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.application.name=api-email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 
-spring.mail.username=crendetialsmt@gmail.com
-spring.mail.password=credentialsmtp
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
-spring.mail.from=crendetialsmt@gmail.com
+spring.mail.from=${EMAIL_FROM}
 
 
