--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=api-email
 
 #CONFIG SMTP
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
-
+spring.brevo.api_key = ${BREVO_API_KEY}
 spring.mail.username=${EMAIL_USERNAME}
 spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
